# running-manager

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Converter.cpp  Converter.h  Defines.h  Event.cpp  Event.h  FastFinishRun.cpp  FastFinishRun.h  Intensity.cpp  Intensity.h  LongRun.cpp  LongRun.h  Mainframe.cpp  Mainframe.h  Plan.cpp  Plan.h  README.md  RunningManager.cpp  RunningManager.h  Section.cpp  Section.h  SettingsPanel.cpp  SettingsPanel.h  TodayControl.cpp  TodayControl.h  Training.cpp  Training.h  TrainingProgramGrid.cpp  TrainingProgramGrid.h  TrainingType.cpp  TrainingType.h  User.cpp  User.h  WebView.cpp  WebView.h  Week.cpp  Week.h  (+13 more)
cmake/: FindwxWidgetsCustom.cmake
doc/: DoxyfileRunningManager.dox  LubbaHelp.tex  license.txt  running-manager-install-x64.iss  tex2rtf.ini
doc/api/html/: _calculator_8h.html  _calculator_8h_source.html  _converter_8h.html  _converter_8h_source.html  _defines_8h.html  _defines_8h_source.html  _event_8h.html  _event_8h_source.html  _fast_finish_run_8h.html  _fast_finish_run_8h_source.html  _intensity_8h.html  _intensity_8h_source.html  _long_run_8h.html  _long_run_8h_source.html  _mainframe_8h.html  _mainframe_8h_source.html  _plan_8h.html  _plan_8h_source.html  _r_e_a_d_m_e_8md.html  _running_manager_8h.html  _running_manager_8h_source.html  _section_8h.html  _section_8h_source.html  _settings_panel_8h.html  _settings_panel_8h_source.html  _today_control_8h.html  _today_control_8h_source.html  _training_8h.html  _training_8h_source.html  _training_program_grid_8h.html  _training_program_grid_8h_source.html  _training_type_8h.html  _training_type_8h_source.html  _user_8h.html  _user_8h_source.html  _web_view_8h.html  _web_view_8h_source.html  _week_8h.html  _week_8h_source.html  _week_day_8h.html  (+97 more)
doc/api/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  (+40 more)
